syntax = "proto3";
package api;
option java_multiple_files = true;
option java_package = "com.xingyun.policy.api.dto.response";

import "google/protobuf/any.proto";
import "enums.proto";
//import "model.proto";

// 可扩充响应消息头，封装通用的请求消息头，可扩充.
message ResponseHeader {
    // 请求唯一的trace_id，全局唯一，响应头中带回，用于跟踪服务.
    string trace_id = 1;

    // 服务总响应时间,ms.
    int64 total_time = 2;

    // 通用状态，如参数校验等功能.
    Status status = 3;

    // 错误消息，STATUS_SUCCESS时无此消息.
    string msg = 11;
}

// 通用翻页响应.
message PageResponse {
    // 页码，[1,n].
    int32 page_num = 1;

    // 分页大小.如果获取的是全部数据, 该字段值为0.
    int32 page_size = 2;

    // 总记录数.
    int32 total_count = 3;
}

// 通用政策响应.
message PolicyResponse {
    // 响应头.
    ResponseHeader header = 1;

    // 业务相关数据响应，直接返回封装的数据,如：FlightRuleItem，CarRuleItem
    // 单笔数据，也以repeated List方式返回.
    repeated google.protobuf.Any data = 100;
}
